--- a/events.yml
+++ b/events.yml
@@ -13,8 +13,8 @@ Event weight:
   Small treasure goblin: 40
   Blood moon: 20
 Kraken on fish chance: 0.005
-Name of mob in Kraken event: '&1Kraken'
+Name of mob in Kraken event: '&1北海巨妖——&e&l克拉肯'
 Balrog chance on mine: 5.0E-4
 Fae chance on chop: 0.001
 Only broadcast event message in event world: false
-Deadmoon announcement message: A dead moon rises, and the undead with it...
+Deadmoon announcement message: 血月冉冉升起, 亡灵蠢蠢欲动...
