--- a/powers/taunt.yml
+++ b/powers/taunt.yml
@@ -2,283 +2,277 @@ isEnabled: true
 name: Taunt
 effect: JUKEBOX
 onDamagedByBow:
-- Fight me like a Player!
-- Afraid to come up-close?
-- I can smell your fear from here!
-- Did you forget your sword?
-- Coward! Bow are no fair!
-- Bows? That's so 2011...
-- Bows are for the weak of mind!
-- Bows are for the weak of spirit!
-- Bows are for the weak of heart!
-- I thought we agreed no bows!
-- Bows? You'll regret that
-- Ow!
-- Oi!
-- Stop that!
-- Why?!
-- You fight like a Dairy Farmer!
-- You are a pain in the backside!
-- En garde! Touche!
-- Hacks!
-- My health is bugged, unkillable!
-- Your hits only make me stronger!
-- Sticks and stones...
-- '''tis but a flesh wound!'
-- Emperor protects!
-- Herobrine, aid me!
-- Behind you! A creeper!
-- I have made a terrible mistake.
-- What doesn't kill me...
-- Zombies dig scars
-- I shall show you my true power!
-- Prepare for my ultimate attack!
-- My reinforcements are arriving!
-- You're going to pay for that!
-- That's going to leave a mark!
-- An eye for an eye!
-- Health insurance will cover that
-- I felt that one in my bones
-- '''tis but a scratch'
-- What was that? A soft breeze?
-- You'll never defeat me like that
-- Pathetic.
-- Weak.
-- That didn't even dent my armor!
-- This is going to be an easy one
-- My grandchildren will feel that
-- Are you even trying?
-- An admin just fully healed me
-- Haxxor!
-- Me? Damaged? Hacks!
-- I can't be defeated!
-- Good thing I'm using hacks!
-- Watch out! Herobrine behind you!
-- My life for Aiur!
-- Your home is getting griefed!
-- Why can't we be friends?
-- Valhalla!
-- Notch save me!
-- No retreat!
-- Hit me with your best shot!
+- 把我当作玩家来对战!
+- 害怕靠近我?
+- 我能感觉得到你的恐惧!
+- 你难道忘了怎么挥剑吗?
+- 懦夫! 用弓不公平!
+- 弓?那是 2011年的破玩意...
+- 弓是为了弱者而存在的东西!
+- 弓为意志薄弱者而装准备!
+- 弓是为内心脆弱的人而准备的!
+- 我认为我们不应该用弓来决斗!
+- 用弓? 你会后悔的
+- 噢!
+- 停下!
+- 为什么?!
+- 你打得就像个奶农!
+- 你的背后就是你的弱点!
+- 防御!
+- 你这是作弊!
+- 我的血量出错了,我现在无敌了!
+- 你的攻击只会让我变得更强!
+- 木棍和骨头...
+- 只是皮肉之伤罢了!'
+- 保护国王!
+- Herobrine, 救我!
+- 在你身后!苦力怕!
+- 我犯了一个很严重的错误.
+- 为什么我杀了我...
+- 僵尸喜欢伤痕
+- 是时候展现我真正的力量了!
+- 准备接下我的最终一击!
+- 我的援军到达了!
+- 你将为此付出代价!
+- 你身上的战痕又将多出一条!
+- 以眼还眼!
+- 我买了人寿保险！
+- 我感觉伤之入骨
+- 不过是个划痕罢了
+- 那是什么? 和风?
+- 你永远也打不败我
+- 可怜.
+- 太弱了.
+- 你根本无法击穿我的盔甲!
+- 你个弱鸡!
+- 我的孙子才会感觉得到你那无力的一击
+- 你是在尝试杀死我吗?
+- OP把我的血加满了!
+- 你个GB!
+- 我受伤了? 你肯定开挂了!
+- 我才不会被打败!
+- 我要开挂了!
+- 小心! Herobrine在你身后!
+- 为了艾尔!
+- 小心你的菊花!
+- 为什么我们不能成为朋友?
+- 瓦尔哈拉!
+- Notch救我!
+- 没有退路了!
+- 用你的全力和我一战!
 onDeath:
-- Alas, poor Yorick!
-- The rest is silence
-- I shall return
-- Unforgivable
-- I live, I die, I live again!
-- WITNESS ME
-- I ride to valhalla!
-- VALHALLA!
-- VALHALLA! DELIVERANCE
-- You win, this time
-- A blight upon your land!
-- A pox upon thee!
-- You'll join me soon enough!
-- This is not over
-- Death is but a setback
-- Not like this...
-- I just wanted to go into space
-- We could've been friends
-- Your sins crawling on your back
-- See you in a bit
-- See you later
-- I'll be waiting for you
-- I will be avenged!
-- I won't go gently into the night
-- Should've gotten life insurance
-- It was my last day on the job
-- It was my last day here
-- Et tu, Brute?
-- RIP
+- 只剩下缄默...
+- 我会回来的
+- 无法原谅
+- 我死了,我将再次重生!
+- 面对我！
+- 我将前往瓦尔哈拉殿堂!
+- 瓦尔哈拉殿堂!
+- 瓦尔哈拉殿堂! 解脱!
+- 这次是你赢了
+- 你的土地即将枯竭!
+- 皮肉之伤，不足挂齿!
+- 你会加入我们的！
+- 还没有结束呢
+- 死亡不过是一个挫折罢了
+- 结局不该是这样...
+- 我将前往宇宙
+- 我们原可以成为朋友的...
+- 你感到了罪恶爬上了你的脊背
+- 稍后见
+- 一会儿见
+- 我将等待着你
+- 我将会复仇!
+- 我才不会在长夜中长眠
+- 我们是不是该先买保险...
+- 这是我生命中的最后一天了
+- 布鲁特，你也有份?
+- 安息吧
 - x.x
 - (x.x)
 - xox
-- Fainted
-- GG, WP
+- 贫弱
+- 玩得不错
 - GG
-- WP
-- GG no RE
-- HAX
-- Hacker
-- Not fair I was lagging
-- You win, this time
-- You monster...
-- Mediocre...
+- 打得不错
+- 你一定开挂了
+- 你开挂
+- 不公平！我卡了
+- 这次是你赢了
+- 你这个怪物...
+- 平庸...
 onTarget:
-- OI! Get over here!
-- What's that I see? A coward?
-- Sir, prepare your fisticuffs!
-- Let's settle this like cavemen!
-- En garde!
-- Look out! A creeper, behind you!
-- Aren't you a right ugly mug!
-- You look delicious.
-- Prepare for trouble!
-- Let the best click spammer win!
-- SPARTAAAAAA
-- I am actually level 9001
-- Not an Elite Mob
-- Poorly disguised Elite Mob
-- Ah, fresh prey!
-- The hunter becomes the hunted!
-- Killing me crashes the server
-- I'm actually a disguised player!
-- I'm not going to drop any loot!
-- Why can't we be friends?
+- 哦！到这儿来！
+- 我看到了什么？一个懦夫？
+- 先生,准备好决一死战吧!
+- 让我们像野蛮人一样解决问题吧!
+- 预备!
+- 小心! 你背后有只苦力怕!
+- 你看起来很美味.
+- 准备好应付麻烦吧!
+- 让最好的垃圾邮件发送者得到胜利吧!
+- 斯巴达达达达达达达达！！！
+- 我实际上是9001级
+- 我不是精英怪
+- 我只是伪装成了精英怪
+- 啊，新鲜的食物!
+- 我才是猎人,而你是猎物!
+- 你杀死我会崩服的!
+- 我是玩家!
+- 我身上没有可以给你的装备!
+- 为什么我们不能成为朋友?
 - Sssssss
-- This is my last day on the job!
-- Stop right there criminal scum!
-- Prepare to die!
-- Praise the Sun!
-- Git gud
-- Alea jacta est!
-- Facta, non verba!
-- Skulls for the skull throne!
-- Blood for the blood throne!
-- A sacrifice for Herobrine!
-- I shall pierce the heavens!
-- Just who do you think I am!?
-- A weakling! He's mine.
-- Dibs on the weakling!
-- Accio player!
-- A duel to the death!
-- I challenge you to a duel!
-- Pika pika!
-- Did you just call me an infernal
-- What did you just call me?
-- I know what you did you monster!
-- This is how your story ends!
-- Prepare for trouble!
-- I've been preparing for this!
-- I am prepared. Are you?
-- A worthy foe!
-- A worthy opponent!
-- A newbie! It's my lucky day!
-- Your stuff or your life!
-- This is a robbery!
-- It's you! You monster!
-- So hungry, give me your flesh!
-- There he is!
-- Must've been my imagination
-- Hi I'm Mr Meeseeks!
-- I'm Mr Meeseeks, look at me!
-- Your diamonds or your life!
-- For king and country!
-- Hit me with your best shot!
-- Witness me!
-- Witness me blood bag!
-- I go all shiny and chrome!
+- 这是我的最后一击了!
+- 停下,你这个罪犯!
+- 准备去死吧!
+- 赞美太阳!
+- 你太弱了
+- 没有退路了!
+- 别说废话了,决斗吧!
+- 为骷髅王座献上头骨!
+- 为血之王座献上鲜血!
+- 为了Herobrine!
+- 我将刺穿天堂!
+- 你以为我是谁!?
+- 太弱了!
+- 弱者!
+- 艾克西欧!
+- 决一死战吧!
+- 我要和你决一死战!
+- 皮卡皮卡!
+- 你是不是把我视为地狱?
+- 你刚才叫我生命?
+- 我知道你这个怪物做了什么!
+- 这将是你的生命之终结!
+- 准备面对麻烦吧!
+- 我早有准备!
+- 我已经准备好了.
+- 可敬的对手!
+- 势均力敌的对手!
+- 一个萌新,我真是太走运了!
+- 交出你的财产,或是你的生命!
+- 抢劫!
+- 是你这只怪物!
+- 我渴望你的鲜血!
+- 他在这儿!
+- 这一定是我的幻觉
+- 你好,我是梅塞克斯先生!
+- 我是梅塞克斯先生, 看着我!
+- 献出你的钻石,或是你的狗命!
+- 为了国王,为了国家!
+- 用尽你的全力来打我被!
+- 面对我!
+- 见证我的鲜血!
+- 我如星之闪耀!
 onDamage:
-- A solid hit!
-- He shoots, and he scores!
-- You'll feel that in the morning!
-- Victory approaches!
-- Victory shall be mine!
-- That was only half of my power!
-- You came to the wrong hood!
-- You messed with the wrong mob!
-- Get ready to get mobbed on!
-- This was your last mistake!
-- Feel the burn!
-- John Cena
-- How are you still standing?
-- Just give up already!
-- Give up!
-- I have the high ground!
-- I will end you!
-- Hope you came prepared for pain!
-- The hunter becomes the hunted!
-- Blood for the blood throne!
-- Skulls for the skull throne!
-- A good player is a dead player!
-- Git gud!
-- Praise the Sun!
-- The end draws near!
-- You are not prepared.
-- Zug zug!
-- Hardly worth my time!
-- I thought this was a challenge?
-- 'Pro tip: don''t get hit'
-- Ima firin mah lazer bwooooooooo
-- For the Emperor!
-- Herobrine shall be pleased!
-- This is the end for you!
-- Are you even trying?
-- Weakling!
-- Pathetic.
-- Maybe this will wake you up.
-- This is just the beggining!
-- We're just getting started!
-- That was just a warm-up!
-- You are no match for me!
-- RKO out of nowhere!
-- I can do this all night long!
-- A fine punching bag!
-- I am the night!
-- I wonder what will break first
-- Revenge for Steve! You monster!
-- Join the mob side!
-- Too easy, too easy!
-- Too easy!
-- You can't defeat me!
-- Pikachuuuuuu
-- Avada kedavra!
-- Crucio!
-- Jierda!
-- A critical hit!
-- This is what skills looks like!
-- 9001 damage!
-- Still standing?
-- Face your defeat!
-- A taste of pain to come!
-- I'll make you endangered!
+- 强力的一击!
+- 射门,进球!
+- 明早你将感受到痛楚!
+- 胜利终将到来!
+- 胜利将属于我!
+- 这只用了我一半的力量!
+- 你来到了你该来的地方!
+- 你遇到了你不改遇到的怪物!
+- 准备好被包围吧!
+- 这将是你最后一次的失误了!
+- 燃烧吧!
+- John Cena!
+- 你怎么还没倒下?
+- 你还是放弃吧!
+- 放弃吧!
+- 我占领高地了!
+- 我将终极你的生命!
+- 希望你能忍受这痛楚!
+- 准备好感受痛楚吧!
+- 为血之王座献上鲜血!
+- 为骷髅王座献上头骨!
+- 你已经死了!
+- 你还不够强大!
+- 赞美太阳!
+- 末日降至!
+- 你没有准备好.
+- 是是是，你说的对!
+- 浪费我的时间!
+- 对我来说这是一个挑战吗?
+- 提示：不要被击中
+- 动感光波 bwooooooooo
+- 为了国王!
+- Herobrine将会很开心!
+- 这将是你的生命的终点!
+- 你仍然在尝试杀死我吗?
+- 太弱了!
+- 可怜.
+- 这可以让你清醒过来.
+- 才刚刚开始呢!
+- 我们才刚刚开始呢!
+- 这只是热身运动!
+- 你配不上与我一战!
+- RKO!出局!
+- 我可以整晚都这么做!
+- 很好的沙包!
+- 我就是黑夜!
+- 我要打哪呢?
+- 为史蒂夫报仇! 你个怪物!
+- 加入怪物阵营吧!
+- 太简单了,太简单了!
+- 太简单了!
+- 你无法打败我!
+- 皮卡丘丘丘丘丘~
+- 阿瓦达索命!
+- 钻心剜骨!
+- 暴击!
+- 这就是我的技能!
+- 9001点伤害!
+- 你还活着?
+- 面对你的失败把!
+- 感受疼痛的滋味吧！
+- 我将置你于死地!
 onDamaged:
-- Ow!
-- Oi!
-- Stop that!
-- Why?!
-- You fight like a Dairy Farmer!
-- You are a pain in the backside!
-- En garde! Touche!
-- Hacks!
-- My health is bugged, unkillable!
-- Your hits only make me stronger!
-- Sticks and stones...
-- '''tis but a flesh wound!'
-- Emperor protects!
-- Herobrine, aid me!
-- Behind you! A creeper!
-- I have made a terrible mistake.
-- What doesn't kill me...
-- Zombies dig scars
-- I shall show you my true power!
-- Prepare for my ultimate attack!
-- My reinforcements are arriving!
-- You're going to pay for that!
-- That's going to leave a mark!
-- An eye for an eye!
-- Health insurance will cover that
-- I felt that one in my bones
-- '''tis but a scratch'
-- What was that? A soft breeze?
-- You'll never defeat me like that
-- Pathetic.
-- Weak.
-- That didn't even dent my armor!
-- This is going to be an easy one
-- My grandchildren will feel that
-- Are you even trying?
-- An admin just fully healed me
+- 噢!
+- 嗷!
+- 停下来！
+- 为什么伤害我?!
+- 你打起架来像个奶农!
+- 你的背后就是你的弱点!
+- 防御!
+- 杀啊!
+- 我的血量出错了, 现在我无敌了!
+- 你的攻击只会让我变得更强!
+- 木棍和骨头...
+- 只是皮肉之伤罢了!'
+- 帝皇之护!
+- Herobrine, 救我!
+- 你后面有只苦力怕!
+- 我犯了一个很严重的错误.
+- 为什么我杀了我...
+- 僵尸喜欢伤痕
+- 是时候展现我真正的力量了!
+- 准备接下我的最终一击!
+- 我的援军到达了!
+- 你将为此付出代价!
+- 你身上的战痕又将多出一条!
+- 以眼还眼!
+- 我买了人寿保险
+- 我感觉伤之入骨
+- 只是个划痕'
+- 那是什么? 和风?
+- 你永远也打不败我
+- 可怜.
+- 太弱了.
+- 你根本无法击穿我的盔甲!
+- 你个弱鸡!
+- 我的孙子才会感觉得到你那无力的一击
+- 你是在尝试杀死我吗?
+- OP把我的血加满了
 - Haxxor!
-- Me? Damaged? Hacks!
-- I can't be defeated!
-- Good thing I'm using hacks!
-- Watch out! Herobrine behind you!
-- My life for Aiur!
-- Your home is getting griefed!
-- Why can't we be friends?
-- Valhalla!
-- Notch save me!
-- No retreat!
-- Hit me with your best shot!
+- 我受伤了? 你肯定开挂了!
+- 我才不会被打败!
+- 我要开挂了!
+- 小心! Herobrine在你身后!
+- 为了艾尔!
+- 小心你的菊花!
+- 为什么我们不能成为朋友?
+- 瓦尔哈拉!
+- Notch救我!
+- 没有退路了!
+- 用你的全力和我一战!
