--- a/powers/zombie_necronomicon.yml
+++ b/powers/zombie_necronomicon.yml
@@ -1,28 +1,10 @@
 isEnabled: true
-name: Necronomicon
+name: 死灵法师
 effect: ENCHANTED_BOOK
-summoningChant: Nor is it to be thought...that man is either the oldest or the last
-  of earth's masters, or that the common bulk of life and substance walks alone. The
-  Old Ones were, the Old Ones are, and the Old Ones shall be. Not in the spaces we
-  know, but between them, they walk serene and primal, undimensioned and to us unseen.
-  Yog-Sothoth knows the gate. Yog-Sothoth is the gate. Yog-Sothoth is the key and
-  guardian of the gate. Past, present, future, all are one in Yog-Sothoth. He knows
-  where the Old Ones broke through of old, and where They shall break through again.
-  He knows where They had trod earth's fields, and where They still tread them, and
-  why no one can behold Them as They tread. By Their smell can men sometimes know
-  Them near, but of Their semblance can no man know, saving only in the features of
-  those They have begotten on mankind; and of those are there many sorts, differing
-  in likeness from man's truest eidolon to that shape without sight or substance which
-  is Them. They walk unseen and foul in lonely places where the Words have been spoken
-  and the Rites howled through at their Seasons. The wind gibbers with Their voices,
-  and the earth mutters with Their consciousness. They bend the forest and crush the
-  city, yet may not forest or city behold the hand that smites. Kadath in the cold
-  waste hath known Them, and what man knows Kadath? The ice desert of the South and
-  the sunken isles of Ocean hold stones whereon Their seal is engraver, but who hath
-  seen the deep frozen city or the sealed tower long garlanded with seaweed and barnacles?
-  Great Cthulhu is Their cousin, yet can he spy Them only dimly. Iä! Shub-Niggurath!
-  As a foulness shall ye know Them. Their hand is at your throats, yet ye see Them
-  not; and Their habitation is even one with your guarded threshold. Yog-Sothoth is
-  the key to the gate, whereby the spheres meet. Man rules now where They ruled once;
-  They shall soon rule where man rules now. After summer is winter, after winter summer.
-  They wait patient and potent, for here shall They reign again.
+summoningChant: 人类既非这地上最古老的主人，也非这地上最后一任主人。寻常的活物与物质亦非独行于世。 旧日支配者昔在，旧日支配者今在，旧日支配者亦将永在。不在吾等所知之空间，而在诸空间之间。
+  彼等平静行过，彼等于初源行过，彼等位于空间之外，而吾等不能见其踪影。 犹格·索托斯知道大门所在。犹格·索托斯即是门，犹格·索托斯即是门之匙，即是看门者。 过去在他，现在在他，未来皆在他。他知晓旧日支配者曾于何处闯入；亦知晓旧日支配者将于何处再次闯入。
+  他知晓彼等曾踏过地上的哪些土地，也知道彼等仍踏在哪些土地上，亦知道当彼等行过时为何无人得见彼等。 借由彼等气味，世人偶尔可知彼等近了，但无人可知晓彼等容貌，然世人可从彼等的人类子嗣身上窥见彼等的容貌；彼等子嗣亦有各样的相貌，有世人最真切的幻想，亦有如彼等一般无形无实之形体。
+  若在适当的时节于荒凉土地上说出某些词句，呼嚎过某些仪式，则彼等将行过并腐坏那些土地，而无人得见彼等。风会喋喋转述彼等声音，地会喃喃转述彼等意识。 彼等令森林屈服，城市粉碎，然没有森林与城市可见彼等之手。冰冷荒原之上，卡达斯知晓彼等，而谁人知晓卡达斯呢？
+  南方的冰雪荒漠与沉没大洋的小岛上承载着刻有彼等印记的石头，而谁人得以眼见那些封冻的城市，那些有海草藤壶的密封高塔呢？ 伟大的克苏鲁亦是彼等兄弟，然其亦只可模糊感知彼等所在。呀！莎布·尼古拉丝！透过那污秽，汝可知晓彼等。
+  彼等之手已在汝之咽喉，而汝仍不见彼等；彼等居所在汝之门槛。犹格·索托斯即是门之匙，诸空间皆汇聚在此。 世人统治着彼等曾统治之世界；彼等亦将会统治世人所统治之世界。春夏过后就是秋冬，秋冬过后亦是春夏。
+  彼等耐心等候，因为彼等终将再度统治此地。
