--- a/powers/zombie_parents.yml
+++ b/powers/zombie_parents.yml
@@ -1,45 +1,45 @@
 isEnabled: true
-name: Parents
+name: 僵尸父母
 effect: SKELETON_SKULL
 deathMessage:
-- You monster!
-- My baby!
-- What have you done!?
-- Revenge!
-- Nooooo!
-- You will pay for that!
-- Eh, he was adopted
-- He's dead! Again!
-- He's deader than before!
-- You broke him!
+- 你个怪物!
+- 我的孩子……
+- 你做了什么！？
+- 这是报复！
+- 不！！！
+- 你会为这付出代价！
+- 嗯……他被收养了……
+- 他死了！又一次！
+- 他比以前死的更彻底了……
+- 你把他折断了！
 bossEntityDialog:
-- You're embarrassing me!
-- He's bullying me!
-- He's the one picking on me!
-- I can deal with this alone!
-- Leave me alone, I got this!
-- Stop following me around!
-- God this is so embarrassing!
-- He took my lunch money!
-- He's bullying me!
+- 你这是在难为我!
+- 他在欺负我！
+- 他在打我！
+- 我能独自解决这件事！
+- 别打扰我，我会搞定的。
+- 别在我周围！
+- 这太尴尬了。
+- 他拿走了我的午餐钱！
+- 他欺负我!
 zombieDad:
-- Get away from my son!
-- Stand up for yourself son!
-- I'll deal with him!
-- Stop picking on my son!
-- Why are you doing this?
-- I'll talk to your parents!
-- You go kiddo!
-- Show him who's boss kiddo!
-- Nice punch kiddo!
+- 从我的儿子身边离开！
+- 证明你自己的儿子！
+- 我将会解决他。
+- 不要捉弄我的儿子。
+- 你为什么要这么做？
+- 我会告诉你的父母！
+- 孩子,上。
+- 告诉他谁才是熊孩子之王！
+- 漂亮的一拳，孩子！
 zombieMom:
-- Hands off my child!
-- Are you hurt sweetie?
-- Did he hurt you sweetie?
-- Let me see that booboo sweetie
-- I'll talk to his parents!
-- You forgot your jacket sweetie!
-- Posture, sweetheart
-- Break it up!
-- Stop this!
-- Did you take out the garbage?
+- 放开我的孩子！
+- 亲爱的，你受伤了吗？
+- 哦亲爱的，你没受伤吧？
+- 让我看看这个，亲爱的。
+- 我会和他的父母谈话的。
+- 亲爱的，你忘下了你的夹克！
+- 摆个姿势，亲爱的。
+- 打破它！
+- 给我停下！
+- 你把垃圾倒出去了吗？
