--- a/translation.yml
+++ b/translation.yml
@@ -1,25 +1,24 @@
-Missing permission message title: I'm afraid I can't let you do that, $username.
-Missing permission message subtitle: 'You need the following permission: $permission'
-Missing permission message: '[EliteMobs] You may not run this command.'
-Valid commands message: 'Valid commands:'
-Invalid command message: 'Command not recognized. Valid commands:'
-Economy pay message: You have paid &2$amount_sent $currency_name &fto $receiver
-Economy currency left message: You now have &2$amount_left $currency_name
-Economy money from payment message: You have received &2$amount_sent $currency_name
-  &ffrom $sender
-Economy payment for negative value: '&cNice try. This plugin doesn''t make the same
-  mistake as some banks have in the past.'
-Economy payment insuficient currency: '&cYou don''t have enough $currency_name to
-  do that!'
-Economy invalid pay command syntax: '&cInput not valid. Command format: &e/em pay
-  [playerName] [amount]'
-Wallet command message: You have &2$balance $currency_name
-Shop buy message: '&aYou have bought $item_name &afor $item_value $currency_name!'
-Shop current balance message: '&aYou have $currency_amount $currency_name.'
-Shop insufficient funds message: '&cYou don''t have enough $currency_name!'
-Shop item cost message: That item costs &c$item_value $currency_name.
-Shop sell message: '&aYou have sold $item_name &afor $currency_amount $currency_name!'
-Shop sale instructions: '&cYou can only sell EliteMobs loot here! (Armor / weapons
-  dropped from elites showing a value on their lore)'
-Teleport time left: '&7[EM] Teleporting in &a$time &7seconds...'
-Teleport cancelled: '&7[EM] &cTeleport interrupted!'
+Missing permission message title: Es tut mir leid, $username, aber das kannst du nicht tun.
+Missing permission message subtitle: 'Du brauchst folgende Permission: $permission.'
+Missing permission message: '[EliteMobs] Du darfst diesen Befehl nicht benutzen.'
+Valid commands message: 'Verfügbare Befehle:'
+Invalid command message: 'Befehl nicht erkannt. Verfügbare Befehle:'
+Economy pay message: Du hast &2$amount_sent $currency_name &fan $receiver bezahlt.
+Economy currency left message: Du hast noch &2$amount_left $currency_name übrig.
+Economy money from payment message: Du hast &2$amount_sent $currency_name
+  &fvon $sender erhalten.
+Economy payment for negative value: '&cNetter Versuch. Aber wir machen nicht denselben
+  Fehler wie so manche Bank.'
+Economy payment insuficient currency: '&cDu hast nicht genügend $currency_name um das zu tun!'
+Economy invalid pay command syntax: '&cFalsche Eingabe. Befehlsformat: &e/em pay
+  [Spielername] [Betrag]'
+Wallet command message: Du hast momentan &2$balance $currency_name.
+Shop buy message: '&aDu hast $item_name &afür $item_value $currency_name gekauft!'
+Shop current balance message: '&aDu hast momentan $currency_amount $currency_name.'
+Shop insufficient funds message: '&cDu hast nicht genügend $currency_name um das zu kaufen!'
+Shop item cost message: Dieses Item kostet &c$item_value $currency_name.
+Shop sell message: '&aDu hast $item_name &afür $currency_amount $currency_name verkauft.'
+Shop sale instructions: '&cDu kannst hier nur EliteMobs Items verkaufen! (Rüstung / Waffen
+  die einen Wert in ihrer Beschreibung haben)'
+Teleport time left: '&7[EM] Teleportiere in &a$time &7Sekunden...'
+Teleport cancelled: '&7[EM] &cTeleport unterbrochen!'
