--- a/events.yml
+++ b/events.yml
@@ -17,4 +17,4 @@ Name of mob in Kraken event: '&1Kraken'
 Balrog chance on mine: 5.0E-4
 Fae chance on chop: 0.001
 Only broadcast event message in event world: false
-Deadmoon announcement message: A dead moon rises, and the undead with it...
+Deadmoon announcement message: Una luna morta sorge, ed i non morti con essa...
