--- a/menus/guild_rank_selector_menu.yml
+++ b/menus/guild_rank_selector_menu.yml
@@ -1,14 +1,14 @@
-questTierSelectorMenuTitle: '[EM] Guild Rank Selection'
-lowTierWarning: '&cElites can''t drop better loot!'
-normalTierWarning: '&aElite can drop better loot!'
-notEnoughCurrencyMessage: '&7[EliteMobs] &4You don''t have enough Elite Coins ($neededAmount
-  $currencyName)! Sell some Elite Mob loot to [/em shop]! You have $currentAmount
+questTierSelectorMenuTitle: '[EM] Seleziona Rank di Gilda'
+lowTierWarning: '&cGli Elite non possono lasciare un bottino migliore!'
+normalTierWarning: '&aGli Elite possono lasciare un bottino migliore!'
+notEnoughCurrencyMessage: '&7[EliteMobs] &4Non possiedi abbastanza Elite Coins ($neededAmount
+  $currencyName)! Vendi qualche bottino dei Mob Elite con [/em shop]! Possiedi $currentAmount
   $currencyName.'
-unlockMessage: "&7[EliteMobs] &aYou have unlocked the $rankName &arank for $price\
-  \ $currencyName. \n&6Happy hunting!"
-questCompleteBroadcastMessage: '&7[EliteMobs] &a$player &ahas reached the $rankName
-  &aguild rank!'
-failedMessage: '&7[EliteMobs] &cYou need to unlock other ranks first!'
+unlockMessage: "&7[EliteMobs] &aHai sbloccato $rankName &arank per $price\
+  \ $currencyName. \n&6Buona caccia!"
+questCompleteBroadcastMessage: '&7[EliteMobs] &a$player &aha raggiunto il rank
+  &adi gilda $rankName !'
+failedMessage: '&7[EliteMobs] &cDevi sbloccare gli altri rank prima!'
 unlockedButton:
   material: GRAY_STAINED_GLASS_PANE
   name: $rankName
