--- a/AdventurersGuild.yml
+++ b/AdventurersGuild.yml
@@ -3,18 +3,18 @@ Add max health when unlocking higher guild ranks: true
 Adventurer's Guild world name: EliteMobs_adventurers_guild
 Guild world coordinates: 208.5,88,236.5,-80,0
 Teleport players to the adventurers guild using /ag: true
-'0': '&8Commoner'
-'1': '&fFresh Meat'
-'2': '&fRookie'
-'3': '&fAdventurer'
-'4': '&2Journeyman'
-'5': '&2Elite Adventurer'
-'6': '&2Veteran'
-'7': '&1Slayer'
-'8': '&1Exterminator'
-'9': '&5&lElite Hunter'
-'10': '&5Hero'
-'11': '&6&l&oLegend'
+'0': '&8Civile'
+'1': '&fCarne Fresca'
+'2': '&fRecluta'
+'3': '&fAvventuriero'
+'4': '&2Specializzato'
+'5': '&2Avventuriero Elite'
+'6': '&2Veterano'
+'7': '&1Assassino'
+'8': '&1Sterminatore'
+'9': '&5&lCacciatore di Elite'
+'10': '&5Eroe'
+'11': '&6&l&oLegenda'
 limitLootBasedOnGuildTier: true
-lootLimiterMessage: '&7[EM] &cYou must unlock the next guild rank through /ag to loot
-  better items!'
+lootLimiterMessage: '&7[EM] &cDevi sbloccare il prossimo rank di gilda con /ag 
+  per ottenere oggetti migliori!'
