--- a/menus/buy_or_sell_menu.yml
+++ b/menus/buy_or_sell_menu.yml
@@ -1,4 +1,4 @@
-Shop name: '[EM] Custom Item Shop'
+Shop name: '[EM] Negozio di articoli personalizzati'
 Information button slot: 4
 Buy slot: 11
 Sell slot: 15
@@ -6,9 +6,9 @@ Information button:
   material: PLAYER_HEAD
   name: '&4&lEliteMobs &r&cby &4&lMagmaGuy'
   lore:
-  - '&8Support the plugins you enjoy!'
-  - '&aClick on the emerald to buy items!'
-  - '&cClick on the redstone to sell items!'
+  - '&8Supporta i plugin che ti piacciono!'
+  - '&aClicka sullo smeraldo per acquistare oggetti!'
+  - '&cClicka sulla pietra rossa per vendere oggetti!'
   owner: magmaguy
 Buy procedurally generated items:
   material: EMERALD
