--- a/menus/procedural_shop_menu.yml
+++ b/menus/procedural_shop_menu.yml
@@ -54,5 +54,5 @@ Reroll button:
   material: PLAYER_HEAD
   name: '&4&lEliteMobs &r&cby &4&lMagmaGuy'
   lore:
-  - '&8Support the plugins you enjoy!'
+  - '&8Supporta i plugin che ti piacciono!'
   owner: magmaguy
