--- a/menus/sell_menu.yml
+++ b/menus/sell_menu.yml
@@ -28,7 +28,7 @@ infoButton:
   material: PLAYER_HEAD
   name: '&4&lEliteMobs &r&cby &4&lMagmaGuy'
   lore:
-  - '&8Support the plugins you enjoy!'
+  - '&8Supporta i plugin che ti piacciono!'
   - '&4Warning!'
   - '&cYou can only sell special'
   - '&cElite Mobs drops in this'
